--- a/Views/Product/Dashboard.cshtml
+++ b/Views/Product/Dashboard.cshtml
@@ -34,7 +34,7 @@
 
     <div class="box box3">
         <form  asp-action="GetById">
-            <input type="search" placeholder="Search by barcode.." aria-label="Search" name="barCode">
+            <input type="search" placeholder="Barcode.." aria-label="Search" name="barCode">
             <button type="submit">Search</button>
         </form>
     </div>
