--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SMS_MVCDTO.ViewModels.NewProductViewModel
+﻿@model SMS_MVCDTO.Models.ViewModels.NewProductViewModel
 
 @{
     ViewData["Title"] = "Edit";
