--- a/Views/Attendant/Dashboard.cshtml
+++ b/Views/Attendant/Dashboard.cshtml
@@ -16,109 +16,114 @@
 }
 
 
-<h1>Attendant Dashboard</h1>
+<main class="main">
+    <!-- <div class="dashboard"> -->
+    <div class="form-container">
 
-<div class="container1">
+        <!-- Signup Form -->
 
-    <div class="box box2">
-        @*<p> Search by ID</p>*@
-        <form asp-action="GetByStaffId">
-            <input type="search" placeholder="Search by ID.." aria-label="Search" name="staffId">
-            <button type="submit">Search</button>
-        </form>
+        <h1>Attendants...</h1>
+
+
+        <div id="">
+
+            <p>
+                <a asp-action="Create">Create New Attendant</a>
+            </p>
+
+            <table class="table table-info">
+                <thead>
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Data.StaffId)
+                        </th>
+
+                        <th>
+                            @Html.DisplayNameFor(model => model.Data.FirstName)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Data.LastName)
+                        </th>
+
+                        <th>
+                            @Html.DisplayNameFor(model => model.Data.Gender)
+                        </th>
+
+                        <th>
+                            @Html.DisplayNameFor(model => model.Data.UserRole)
+                        </th>
+
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Data.StaffId)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Data.FirstName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Data.LastName)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Data.Gender)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Data.UserRole)
+                            </td>
+
+
+                            <td>
+
+                                <a asp-action="Details" asp-route-staffId="@item.Data.StaffId">Details</a>
+                            </td>
+                        </tr>
+
+                    }
+                </tbody>
+            </table>
+
+        </div>
+
     </div>
-    <div class="box box3">
-        @*<p> Search by Email</p>*@
-        <form asp-controller="Attendant" asp-action="GetByEmail">
-            <input type="text" placeholder="Search by Email.." name="email">
-            <button type="submit">Search</button>
-        </form>
+
+    <!-- search box  -->
+    <div class="search-container-side">
+
+        <!-- search box  -->
+        <div class="search-container">
+            <form asp-controller="Attendant" asp-action="GetByStaffId">
+                <input type="text" placeholder="Attendant Id.." name="barCode">
+                <button type="submit">
+                    <i class="fa fa-search"></i> Search
+                </button>
+            </form>
+        </div>
+
+        <!-- search box  -->
+        <div class="search-container">
+            <form asp-controller="Attendant" asp-action="GetByName">
+                <input type="text" placeholder="Attendant Name..." name="name">
+                <button type="submit">
+                    <i class="fa fa-search"></i> Search
+                </button>
+            </form>
+        </div>
+
     </div>
-    <div class="box box4">
-        @*<p> Search by Name</p>*@
-        <form asp-action="GetByName">
-            <input type="text" placeholder="Search by Name.." name="name">
-            <button type="submit">Search</button>
-        </form>
-    </div>
 
-</div>
+
+</main>
 
 
 
-<div class="container">
-
-    <div class="box box1"> side bar </div>
-</div>
-
-
-
-<p>
-    <a asp-action="Create">Create New Attendant</a>
-</p>
-
-<table class="table table-info">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.StaffId)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Data.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.LastName)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Data.Gender)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Data.UserRole)
-            </th>
-
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.StaffId)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.LastName)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.Gender)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.UserRole)
-                </td>
-
-
-                <td>
-
-                    <a asp-action="Details" asp-route-staffId="@item.Data.StaffId">Details</a>
-                </td>
-            </tr>
-
-        }
-    </tbody>
-</table>
-            <br />
-            <br />
-            <br />
-            <br />
 
 
