--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model SMS_MVCDTO.ViewModels.NewProductViewModel
+﻿@model SMS_MVCDTO.Models.ViewModels.NewProductViewModel
+
 
 @{
     ViewData["Title"] = "Create";
@@ -14,66 +15,87 @@
     }
 }
 
-<h1> ADD PRODUCT</h1>
-<hr />
-<div class="col-md-4">
-    @using (Html.BeginForm("Create", "Product"))
-    {
-        <div class="form-group">
-            @Html.LabelFor(x => x.CreateProduct.Barcode, new {@class = "control-label"})
-            @Html.TextBoxFor(x => x.CreateProduct.Barcode, new {@class = "form-control"})
-            @Html.ValidationMessageFor(x => x.CreateProduct.Barcode,"", new {@class="text-danger"})
+
+<main class="main">
+    <!-- <div class="dashboard"> -->
+    <div class="form-container">
+
+        <div id="Data-form">
+            @using (Html.BeginForm("Create", "Product"))
+            {
+
+                <h1>Add new Product</h1>
+
+                <hr />
+                <div class="form-group">
+                    @Html.LabelFor(x => x.CreateProduct.Barcode, new {@class = "control-label"})
+                    @Html.TextBoxFor(x => x.CreateProduct.Barcode, new {@class = "form-control"})
+                    @Html.ValidationMessageFor(x => x.CreateProduct.Barcode,"", new {@class="text-danger"})
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(x => x.CreateProduct.Name, new {@class = "control-label"})
+                    @Html.TextBoxFor(x => x.CreateProduct.Name, new {@class = "form-control"})
+                    @Html.ValidationMessageFor(x => x.CreateProduct.Name,"", new {@class="text-danger"})
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(x => x.CreateProduct.Description, new {@class = "control-label"})
+                    @Html.TextBoxFor(x => x.CreateProduct.Description, new {@class = "form-control"})
+                    @Html.ValidationMessageFor(x => x.CreateProduct.Description,"", new {@class="text-danger"})
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(x => x.CreateProduct.SellingPrice, new {@class = "control-label"})
+                    @Html.TextBoxFor(x => x.CreateProduct.SellingPrice, new {@class = "form-control"})
+                    @Html.ValidationMessageFor(x => x.CreateProduct.SellingPrice,"", new {@class="text-danger"})
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(x => x.CreateProduct.Quantity, new {@class = "control-label"})
+                    @Html.TextBoxFor(x => x.CreateProduct.Quantity, new {@class = "form-control"})
+                    @Html.ValidationMessageFor(x => x.CreateProduct.Quantity,"", new {@class="text-danger"})
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(x => x.CreateProduct.ReorderLevel, new {@class = "control-label"})
+                    @Html.TextBoxFor(x => x.CreateProduct.ReorderLevel, new {@class = "form-control"})
+                    @Html.ValidationMessageFor(x => x.CreateProduct.ReorderLevel,"", new {@class="text-danger"})
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(x => x.PCategory, new {@class = "control-label"})
+                    @Html.DropDownListFor(x => x.CreateProduct.Category, new SelectList(Model.PCategory,"Data.CategoryCode","Data.Name"),"Select Category" ,new {@class = "form-control"})
+                    @Html.ValidationMessageFor(x => x.CreateProduct.Category,"", new {@class="text-danger"})
+                </div>
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-success">Add</button>
+                </div>
+            }
+
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(x => x.CreateProduct.Name, new {@class = "control-label"})
-            @Html.TextBoxFor(x => x.CreateProduct.Name, new {@class = "form-control"})
-            @Html.ValidationMessageFor(x => x.CreateProduct.Name,"", new {@class="text-danger"})
-        </div>
+    </div>
 
-        <div class="form-group">
-            @Html.LabelFor(x => x.CreateProduct.Description, new {@class = "control-label"})
-            @Html.TextBoxFor(x => x.CreateProduct.Description, new {@class = "form-control"})
-            @Html.ValidationMessageFor(x => x.CreateProduct.Description,"", new {@class="text-danger"})
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(x => x.CreateProduct.SellingPrice, new {@class = "control-label"})
-            @Html.TextBoxFor(x => x.CreateProduct.SellingPrice, new {@class = "form-control"})
-            @Html.ValidationMessageFor(x => x.CreateProduct.SellingPrice,"", new {@class="text-danger"})
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(x => x.CreateProduct.Quantity, new {@class = "control-label"})
-            @Html.TextBoxFor(x => x.CreateProduct.Quantity, new {@class = "form-control"})
-            @Html.ValidationMessageFor(x => x.CreateProduct.Quantity,"", new {@class="text-danger"})
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(x => x.CreateProduct.ReorderLevel, new {@class = "control-label"})
-            @Html.TextBoxFor(x => x.CreateProduct.ReorderLevel, new {@class = "form-control"})
-            @Html.ValidationMessageFor(x => x.CreateProduct.ReorderLevel,"", new {@class="text-danger"})
-        </div>
+    <!-- search box  -->
+    <div class="search-container">
+        <form>
+            <input type="text" placeholder="Search...">
+            <button type="submit"><i class="fa fa-search"></i> Search </button>
+        </form>
+    </div>
 
 
-        <div>
-            @Html.LabelFor(x => x.PCategory, new {@class = "control-label"})
-            @Html.DropDownListFor(x => x.CreateProduct.Category, new SelectList(Model.PCategory,"Data.CategoryCode","Data.Name"),"Select Category" ,new {@class = "form-control"})
-            @Html.ValidationMessageFor(x => x.CreateProduct.Category,"", new {@class="text-danger"})
 
-        </div>
-
-
-        <div class="form-group">
-            <button type="submit" class="btn btn-success">Add</button>
-        </div>
+    @section Scripts {
+        @{
+            await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        }
     }
-</div>
-<br />
-<br />
-<br />
-@section scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-}
+
+</main>
+@* ends here *@
+
+
+
