--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,176 +1,208 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - SMS_MVCDTO</title>
-        <link rel="stylesheet" href="~/css/FontAwesome6.2/css/all.css">
-        <script src="~/js/site.js"></script>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - SMS_MVCDTO</title>
+    <link rel="stylesheet" href="~/css/FontAwesome6.2/css/all.css">
+    <script src="~/js/site.js"></script>
 
-        <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous"> -->
-        <link rel="stylesheet" href="~/css/styles.css">
-        <link rel="stylesheet" href="~/SMS_MVCDTO.styles.css"
-            asp-append-version="true" />
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="~/css/styles.css">
+    <link rel="stylesheet" href="~/SMS_MVCDTO.styles.css"
+          asp-append-version="true" />
 
-    </head>
+</head>
 
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm
+<body>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm
                 navbar-light bg-white border-bottom box-shadow mb-3">
-                <div class="container-fluid">
-                    <a class="navbar-brand" asp-area=""
-                        asp-controller="Home"
-                        asp-action="Index">Colon Sales Record</a>
+            <div class="container-fluid">
+                <a class="navbar-brand" asp-area=""
+                   asp-controller="Home"
+                   asp-action="Index">Colon Sales Record</a>
                 @* MDelete *@
-                    <button class="navbar-toggler" type="button"
+                <button class="navbar-toggler" type="button"
                         data-bs-toggle="collapse"
                         data-bs-target=".navbar-collapse"
                         aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle
                         navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 @* MDelete *@
 
-                    <div class="navbar-collapse collapse d-sm-inline-flex
+                <div class="navbar-collapse collapse d-sm-inline-flex
                         justify-content-between">
-                        <ul class="navbar-nav flex-grow-1">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area=""
-                                    asp-controller="Home"
-                                    asp-action="Index">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area=""
-                                    asp-controller="Home"
-                                    asp-action="Privacy">About
-                                    us</a>
-                            </li>
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""
+                               asp-controller="Home"
+                               asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""
+                               asp-controller="Home"
+                               asp-action="Privacy">
+                                About
+                                us
+                            </a>
+                        </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area=""
-                                    asp-controller="Home"
-                                    asp-action="Privacy">Contact
-                                    us</a>
-                            </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""
+                               asp-controller="Home"
+                               asp-action="Privacy">
+                                Contact
+                                us
+                            </a>
+                        </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area=""
-                                    asp-controller="Home"
-                                    asp-action="Privacy">Privacy</a>
-                            </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""
+                               asp-controller="Home"
+                               asp-action="Privacy">Privacy</a>
+                        </li>
 
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area=""
-                                    asp-controller="Home"
-                                    asp-action="Privacy">News</a>
-                            </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""
+                               asp-controller="Home"
+                               asp-action="Privacy">News</a>
+                        </li>
 
-                        </ul>
+                    </ul>
 
 
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area=""
-                                    asp-controller="Home"
-                                    asp-action="Login">Login</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area=""
-                                    asp-controller="Customer"
-                                    asp-action="Create">Sign-Up</a>
-                            </li>
-                        </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""
+                               asp-controller="Home"
+                               asp-action="Login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""
+                               asp-controller="Customer"
+                               asp-action="Create">Sign-Up</a>
+                        </li>
+                    </ul>
 
-                    </div>
                 </div>
-            </nav>
-        </header>
+            </div>
+        </nav>
+    </header>
 
     @* <div class="wrapper"> *@
-        <div class="bodycontain bd-bline">
+    <div class="bodycontain bd-oline">
+        <div class="sidebar ">
+            <h3>Navigation</h3>
+            <ul>
 
+                <li><a asp-area="" asp-controller="" asp-action="">Home</a></li>
+                @* <li><a href="#"></a></li> *@
 
+                <li class="dropdown">
+                    <a href="#">Attendants</a>
+                    <ul class="dropdown-content">
+                        <li>
+                            <a asp-area="" asp-controller="Attendant"
+                               asp-action="Create">Create Attendants</a>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Attendant"
+                               asp-action="Dashboard">Manage Attendants</a>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Attendant"
+                               asp-action="">View all attendants</a>
+                        </li>
+                    </ul>
+                </li>
 
+                <li class="dropdown">
+                    <a href="#">Customers</a>
+                    <ul class="dropdown-content">
+                        <li>
+                            <a asp-area="" asp-controller="Customer"
+                               asp-action="Create">Create Customer</a>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Customer"
+                               asp-action="Dashboard">Manage Customer</a>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Customer"
+                               asp-action="">View all Customers</a>
+                        </li>
+                    </ul>
+                </li>
 
+                <li class="dropdown">
+                    <a href="#">Products</a>
+                    <ul class="dropdown-content">
+                        <li>
+                            <a asp-area="" asp-controller="Product"
+                               asp-action="Create">Add new products</a>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Product"
+                               asp-action="Dashboard">Manage Product</a>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Product"
+                               asp-action="">View all Products</a>
+                        </li>
+                    </ul>
+                </li>
 
-
-            <div class="sidebar ">
-                <h3>Navigation</h3>
-                <ul>
-
-                    <li><a asp-area="" asp-controller="" asp-action="">Home</a></li>
-                    @* <li><a href="#"></a></li> *@
-
-                    <li class="dropdown">
-                        <a href="#">Attendants</a>
-                        <ul class="dropdown-content">
-                            <li><a asp-area="" asp-controller="Attendant" asp-action="Create">Create Attendants</a></li>
-                            <li><a asp-area="" asp-controller="Attendant" asp-action="">Manage Attendants</a></li>
-                            <li><a asp-area="" asp-controller="Attendant" asp-action="">View all attendants</a></li>
-                        </ul>
-                    </li>
-                    
-                    <li class="dropdown">
-                        <a  href="#">Customers</a>
-                        <ul class="dropdown-content">
-                            <li><a asp-area="" asp-controller="Customer" asp-action="Create">Create Customer</a></li>
-                            <li><a asp-area="" asp-controller="Customer" asp-action="">Manage Customer</a></li>
-                            <li><a asp-area="" asp-controller="Customer" asp-action="">View all Customers</a></li>
-                        </ul>
-                    </li>
-                   
-                    <li class="dropdown">
-                        <a  href="#">Products</a>
-                        <ul class="dropdown-content">
-                            <li><a asp-area="" asp-controller="Product" asp-action="Create">Add new products</a></li>
-                            <li><a asp-area="" asp-controller="Product" asp-action="">Manage Product</a></li>
-                            <li><a asp-area="" asp-controller="Product" asp-action="">View all Products</a></li>
-                        </ul>
-                    </li>
-
-                    @* <li><a href="#">Products</a></li> *@
-                    <li><a asp-area="" asp-controller="Transaction" asp-action="">Transactions</a></li>
-                </ul>
-            </div>
-
-
-
-
-
-
-            <div class="bodycontains">
-                <main role="main" class="pb-3">
-                    <div class="bd-line">
-
-                    @RenderBody()
-                    </div>
-                </main>
-            </div>
-
-
-
+                @* <li><a href="#">Products</a></li> *@
+                <li>
+                    <a asp-area="" asp-controller="Transaction"
+                       asp-action="">Transactions</a>
+                </li>
+            </ul>
         </div>
+
+
+
+
+
+        <div class="bodycontains">
+            
+            <main role="main" class="pb-3">
+                @* <div class="bd-line"> *@
+
+                @RenderBody()
+                @* </div> *@
+            </main>
+@*
+            <footer class="border-top footer text-muted">
+                <div class="container">
+                    &copy; 2022 - SMS_MVCDTO - <a asp-area=""
+                                                  asp-controller="Home"
+                                                  asp-action="Privacy">Privacy</a>
+                </div>
+            </footer>*@
+        </div>
+
+
+
+    </div>
+
+    @* <div> *@
 
     @* <div class="footercontain bd-gline"> *@
 
-    @* <footer class="border-top footer text-muted">
-        <div class="container">
-        &copy; 2022 - SMS_MVCDTO - <a asp-area=""
-        asp-controller="Home"
-        asp-action="Privacy">Privacy</a>
-        </div>
-        </footer> *@
-    @* </div> *@
+
 
     @* </div> *@
 
-        <script src="~/lib/jquery/dist/jquery.min.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
-    </body>
+</body>
 
 </html>
