--- a/Views/Transaction/Create.cshtml
+++ b/Views/Transaction/Create.cshtml
@@ -1,5 +1,6 @@
 ﻿@*@model SMS_MVCDTO.Models.DTOs.ProductDTOs.ProductResponseModel*@
-@model SMS_MVCDTO.ViewModels.ProductTransactionViewModel
+@*@model ProductTransactionViewModel*@
+@model SMS_MVCDTO.Models.ViewModels.CreateProductTransactionViewModel
 
 
 @{/*
