--- a/Views/Transaction/Index.cshtml
+++ b/Views/Transaction/Index.cshtml
@@ -15,106 +15,129 @@
 
 }
 
-<h1>Transactions</h1>
 
-<div class="container1">
-    <div class="box box2">
-        <form asp-action="Details">
-            <input type="search" placeholder="Search by Ref. No.." aria-label="Search" name="referenceNo">
-            <button type="submit">Search</button>
-        </form>
+
+
+<main class="main">
+    <!-- <div class="dashboard"> -->
+    <div class="form-container">
+
+        <!-- Signup Form -->
+        <h1>Transactions...</h1>
+
+
+        <div id="">
+
+            <table class="table table-info">
+                <thead>
+                    <tr>
+                        <th>S/N</th>
+
+                        <th>
+                            <label> Ref. No</label>
+                        </th>
+
+                        <th>
+                            <label> Date</label>
+                        </th>
+
+                        <th>
+                            <label> Customer</label>
+                        </th>
+
+                        <th>
+                            <label> Amount </label>
+                        </th>
+
+                        <th></th>
+
+                    </tr>
+
+                </thead>
+
+                <tbody>
+                    @{
+                        int serialNumber = 1;
+                    }
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @* Numbering *@
+                                @serialNumber
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Data.ReferenceNo)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Data.Created)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem =>
+                            item.Data.CustomerName)
+                            </td>
+
+
+                            <td>
+                                &#x20A6;@Html.DisplayFor(modelItem =>
+                            item.Data.TotalAmount)
+                            </td>
+
+                            <td>
+                                <a asp-controller="Transaction" asp-action="Details"
+                               asp-route-ReferenceNo="@item.Data.ReferenceNo">Details</a>
+                            </td>
+                        </tr>
+                        serialNumber++;
+                    }
+                </tbody>
+            </table>
+
+        </div>
+
     </div>
 
-    <div class="box box3">
-        <form asp-action="GetByName">
-            <input type="text" placeholder="Search by Customer.." name="name">
-            <button type="submit">Search</button>
-        </form>
+    <!-- search box  -->
+    <div class="search-container-side">
+
+        <!-- search box  -->
+        <div class="search-container">
+            <form asp-controller="Product" asp-action="GetById">
+                <input type="text" placeholder="Barcode..." name="barCode">
+                <button type="submit">
+                    <i class="fa fa-search"></i> Search
+                </button>
+            </form>
+        </div>
+
+        <!-- search box  -->
+        <div class="search-container">
+            <form asp-controller="Transaction" asp-action="Details">
+                <input type="text" placeholder="Transaction ref..." name="referenceNo">
+                <button type="submit">
+                    <i class="fa fa-search"></i> Search
+                </button>
+            </form>
+        </div>
+
     </div>
 
-    <div class="box box4">
-        <form asp-action="GetByAttendant">
-            <input type="text" placeholder="Search by Attendant Id.." name="staffId">
-            <button type="submit">Search</button>
-        </form>
-    </div>
 
-</div>
-
-<div class="container">
-
-    <div class="box box1"> side bar </div>
-</div>
-
-<table class="table table-info col-md-4">
-    <thead>
-        <tr>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Data.ReferenceNo)
-            </th>
-
-            <th>
-                @Html.ActionLink("Created", "Index", "Transaction",1)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Data.CustomerId)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Data.AttendantId)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Data.BarCode)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Data.Quantity)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Data.TotalAmount)
-            </th>
-
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.ReferenceNo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.Created)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.CustomerId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.AttendantId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.BarCode)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.Quantity)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.TotalAmount)
-                </td>
+</main>
 
 
-                <td>
-                    <a asp-action="Details" asp-route-referenceNo="@item.Data.ReferenceNo">Details</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+
+
+
+
+
+
+
+
+
+
+
+
+
